tests/src/frontend/typechecking/invalid/generic_static.sk
base class Foo<Tv: nonNullable> {
  static fun doesnt_have_constraint<Tv_>(_: Foo<Tv_>): void {
    void
  }
}
